@@ -1,3 +1,5 @@
+* [Bug 931] Require -lreadline to be asked for explicitly.
+* [Bug 764] When looking for -lreadline support, also try using -lncurses.
 * [Bug 909] Fix int32_t errors for ntohl().
 * [Bug 376/214] Enhancements to support multiple if names and IP addresses.
 * [Bug 929] int32_t is undefined on Windows.  Casting wrong.
